<resources>
    <string name="app_name">Biologer</string>
    <string name="username">Username (email)</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="invalid_email">Email is mistyped</string>
    <string name="wrong_creds">Wrong email or password</string>
    <string name="no_account1">You can</string>
    <string name="no_account2">register here</string>
    <string name="no_account3">if you don’t have an account</string>
    <string name="pass_forgotten">Reset forgotten password online!</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="unknown">unknown</string>
    <string name="taxon_name_hint">Taxon name</string>
    <string name="specimens_number_hint">Number of individuals</string>
    <string name="stage_hint">Developmental stage of the taxon</string>
    <string name="specimen_is_dead">Found dead?</string>
    <string name="dead_comment_hint">Cause of death</string>
    <string name="habitat">Habitat</string>
    <string name="comment_hint">Comment</string>
    <string name="cancel">Cancel</string>
    <string name="sacuvaj">Save</string>
    <string name="upload">Upload</string>
    <string name="title_activity_map">Map</string>
    <string name="entry_title">Field observation</string>
    <string name="saved">The entry is saved.</string>
    <string name="location_is_zero">Location is not retrieved yet. Would you like to wait for location or cancel this entry?</string>
    <string name="wait">Wait</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_database_available">New version of taxonomic database is available online. You can update it now or later from the application Setup. Would you like to update your database?</string>
    <string name="gps_update"><b>Warning:</b> You are about to overwrite original location with your current location! Are you sure?</string>
    <string name="logout_btn">Logout</string>
    <string name="setup">Setup</string>
    <string name="about">About Biologer</string>
    <string name="about_us">About us</string>
    <string name="list">List of findings</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="help">Help</string>
    <string name="textAbout">Biologer is an Open Source application issued under MIT license and designed to collect data on biodiversity in Eastern Europe.</string>
    <string name="textAbout1">Biologer was developed with funds from Rufford Small Grants (project Nos. 20507-B and 24652-B) and MAVA (project No. 15097).</string>
    <string name="version">Version: </string>
    <string name="textAbout2">To find out more details about Biologer, visit our web page: </string>
    <string name="currently_logged_data">You are currently logged into a database:</string>
    <string name="logout_from_biologer">Do you want to logout from this Biologer database?</string>
    <string name="database_connect_error">Application was unable to connect with database!</string>
    <string name="Slide1_title">Database options</string>
    <string name="first_slide">Biologer application can connect to multiple databases. You should start by choosing your preferred database and registering online.</string>
    <string name="Slide2_title">Navigation is easy</string>
    <string name="second_slide">Side panel provides all the shortcuts and settings you need. Just swipe the screen to the right and you are ready to go.</string>
    <string name="Slide3_title">The main screen</string>
    <string name="third_slide">From the main screen you can add, edit or delete your observations and send the data to one of our servers.</string>
    <string name="Slide4_title">New observations</string>
    <string name="fourth_slide">Adding data is easy! Suggest the species, add some photos and Biologer will do the rest. Advanced options can also be unlocked from the Preferences.</string>
    <string name="unprecise_coordinates">The coordinate precision is less than 25 m. Would you like to wait for precise location?</string>
    <string name="save_anyway">Save anyway</string>
    <string name="database_empty">Biologer’s database for species and other taxa is not downloaded from the server yet. Ensure that you have a stable internet connection to continue.</string>
    <string name="contin">Download</string>
    <string name="skip">Skip for now</string>
    <string name="google_maps_title">Google Map</string>
    <string name="select_map_type">Select map type</string>
    <string name="you_are_here">You are here!</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="sattelite">Satellite</string>
    <string name="license10">Free (CC BY-SA)</string>
    <string name="license_default">Get from server</string>
    <string name="license_timed">Temporary closed (publish as free after 3 years)</string>
    <string name="license20">Free, NonCommercial (CC BY-SA-NC)</string>
    <string name="license30">Partially Open (restricted to 10km)</string>
    <string name="license40">Closed (available to you and the editors)</string>
    <string name="choose_dlicense">Choose different license for your data collected through the application</string>
    <string name="choose_ilicense">Choose different license for your images sent through the application</string>
    <string name="choose_project">Sets the project title if your data was collected during a project.</string>
    <string name="project_name">Project name</string>
    <string name="channel_description">Displays notifications related with taxonomic updates.</string>
    <string name="channel_name">Update taxa</string>
    <string name="notify_title_taxa">Updating species</string>
    <string name="notify_desc_taxa">Downloading new taxonomic database.</string>
    <string name="notify_title_taxa_updated">Up to date</string>
    <string name="notify_desc_taxa_updated">Taxonomic database is now updated.</string>
    <string name="notify_title_taxa_failed">Update failed</string>
    <string name="notify_desc_taxa_failed">Taxonomic database was not updated from the server. Ensure that you have a stable internet connection and retry.</string>
    <string name="retry">Retry</string>
    <string name="OK">OK</string>
    <string name="resume_action">Resume</string>
    <string name="data_license">Data license</string>
    <string name="image_license">Image license</string>
    <string name="update_taxa">Download all species</string>
    <string name="update_taxa_desc">Re-downloads entire taxonomic tree in your application from Biologer server.</string>
    <string name="updating_taxa_be_patient">Updating taxonomic database from the server. Please be patient.</string>
    <string name="pause_action">Pause</string>
    <string name="notify_title_taxa_canceled">Update canceled</string>
    <string name="notify_desc_taxa_canceled">Downloading new taxonomic database is canceled by the user.</string>
    <string name="invalid_taxon_name">It looks like you selected an unknown taxon. Do you want to save it anyway?</string>
    <string name="image_frame">Image frame</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="map">Map</string>
    <string name="advanced_entry">Advanced observation entry</string>
    <string name="advanced_entry_desc">Enables advanced options that could be entered with your occurrence (date, time, coordinates, etc.).</string>
    <string name="stage_egg">Egg</string>
    <string name="stage_larva">Larva</string>
    <string name="stage_pupa">Pupa</string>
    <string name="stage_adult">Adult</string>
    <string name="Biologer">Biologer</string>
    <string name="cannot_connect_token">Cannot get response (token) from the server. Check the internet connection.</string>
    <string name="database">Database</string>
    <string name="User">User</string>
    <string name="stage_juvenile">Juvenile</string>
    <string name="auto_download">Auto download and upload</string>
    <string name="auto_download_desc">Allows data to be automatically downloaded and uploaded without user intervention. By default the data will be transferred only on WiFi.</string>
    <string name="preferences_data_entry">Data entry</string>
    <string name="allow_english_names">Always list english names</string>
    <string name="allow_english_names_desc">Allows Biologer to list english names for the species even if the phone locale is set to other language.</string>
    <string name="preferences_user_settings">User account</string>
    <string name="preferences_other">Other settings</string>
    <string name="defaults_to_adult">Set as adult by default</string>
    <string name="defaults_to_adult_summary">Sets the life stage to adult by default, if adult stage exist for observed taxa.</string>
    <string name="species_groups">Choose species groups</string>
    <string name="species_groups_desc">By selecting only certain groups (i.e. birds, butterflies or plants) it will be easier to find species for data entry. Other species will not pop up in the drop down menu.</string>
    <string name="biologer_org_url">https://biologer.org</string>
    <string name="location_name">Location name</string>
    <string name="location_name_description">Adds location name along with observations from the field. This location will be used while you are within the same area.</string>
    <string name="biologer_banner">Biologer banner</string>
    <string name="banner_username">Username</string>
    <string name="banner_mail_example">your_address@biologer.org</string>
    <string name="choose_language">Biologer Language</string>
    <string name="choose_language_desc">Lets you choose the language of the application.</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_summary">Allows you to delete user account and the collected data associated with that account.</string>
    <string name="account_settings">Account settings</string>
    <string name="account_setup_desc">Allows you to change email address, password, or delete user account.</string>
    <string name="change_email">Change email address</string>
    <string name="change_email_desc">Lets you change email address linked with your account.</string>
    <string name="change_password">Change password</string>
    <string name="cloud_icon">Cloud icon</string>
    <string name="temperature_icon">Temperature icon</string>
    <string name="temperature">Temperature</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="c">°C</string>
    <string name="percent">%</string>
    <string name="wind_icon">Wind icon</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_direction">Wind direction</string>
    <string name="atmospheric_pressure_icon">Atmospheric pressure icon</string>
    <string name="atmospheric_pressure">Atmospheric pressure</string>
    <string name="hpa">hPa</string>
    <string name="humidity_icon">Humidity icon</string>
    <string name="air_humidity">Air humidity</string>
    <string name="additional_comments">Additional comments</string>
    <string name="other_data">Other data</string>
    <string name="other_data_desc">Here you can enter the habitat type and additional comments about the count.</string>
    <string name="weather_data">Weather data</string>
    <string name="weather_data_desc">Weather data is taken from OpenWeather. You can review them here and make corrections if necessary.</string>
    <string name="empty">empty</string>
    <string name="sort_observations">Sort observations</string>
    <string name="sort_observations_desc">Enables various sorting of species observations in the list of findings.</string>
</resources>