<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory
        android:title="@string/preferences_data_entry"
        app:iconSpaceReserved="false">

        <PreferenceScreen
            android:key="species_groups"
            android:title="@string/species_groups"
            android:summary="@string/species_groups_desc"
            app:iconSpaceReserved="false"
            android:defaultValue="false"/>

        <EditTextPreference
            android:key="project_name"
            android:title="@string/project_name"
            android:dialogTitle="@string/project_name"
            android:summary="@string/choose_project"
            app:iconSpaceReserved="false"
            android:defaultValue="" />

        <EditTextPreference
            android:key="location_name"
            android:title="@string/location_name"
            android:dialogTitle="@string/location_name"
            android:summary="@string/location_name_description"
            app:iconSpaceReserved="false"
            android:defaultValue=""/>

        <CheckBoxPreference
            android:key="adult_by_default"
            android:title="@string/defaults_to_adult"
            android:summary="@string/defaults_to_adult_summary"
            app:iconSpaceReserved="false"
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:key="advanced_interface"
            android:title="@string/advanced_entry"
            android:summary="@string/advanced_entry_desc"
            app:iconSpaceReserved="false"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preferences_user_settings"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="data_license"
            android:title="@string/data_license"
            android:summary="@string/choose_dlicense"
            app:iconSpaceReserved="false"
            android:defaultValue="0"/>

        <ListPreference
            android:key="image_license"
            android:title="@string/image_license"
            android:summary="@string/choose_ilicense"
            app:iconSpaceReserved="false"
            android:defaultValue="0" />

        <PreferenceScreen
            android:key="account_setup"
            android:title="@string/account_settings"
            android:summary="@string/account_setup_desc"
            app:iconSpaceReserved="false"
            android:defaultValue="false"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/preferences_other"
            app:iconSpaceReserved="false">

        <PreferenceScreen
            android:key="advanced_setup"
            android:title="@string/advanced_settings"
            android:summary="@string/advanced_settings_desc"
            app:iconSpaceReserved="false"
            android:defaultValue="false"/>

        <ListPreference
            android:key="language_settings"
            android:title="@string/choose_language"
            android:summary="@string/choose_language_desc"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>