<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.biologer.biologer.gui.ActivityTimedCount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="0dp"
        android:text="@string/weather_data" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="4dp"
        android:paddingBottom="0dp"
        android:text="@string/weather_data_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="0dp"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/temperature_icon"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_temperature" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timed_count_edit_text_temperature"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:background="@null"
            android:importantForAutofill="no"
            android:textSize="20sp"
            android:hint="@string/empty"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:text="@string/c" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cloud_icon"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_cloud" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cloudiness"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timed_count_edit_text_cloudiness"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:textSize="20sp"
            android:background="@null"
            android:importantForAutofill="no"
            android:hint="@string/empty"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:text="@string/percent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/wind_icon"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_wind" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timed_count_edit_text_wind_speed"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:textSize="20sp"
            android:background="@null"
            android:importantForAutofill="no"
            android:paddingStart="0sp"
            android:paddingEnd="32sp"
            android:hint="@string/empty"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/wind_icon"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_wind" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/wind_direction"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timed_count_edit_text_wind_direction"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:textSize="20sp"
            android:background="@null"
            android:paddingStart="0sp"
            android:paddingEnd="32sp"
            android:importantForAutofill="no"
            android:hint="@string/empty"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/atmospheric_pressure_icon"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_pressure" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/atmospheric_pressure"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timed_count_edit_text_pressure"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:textSize="20sp"
            android:background="@null"
            android:importantForAutofill="no"
            android:hint="@string/empty"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:text="@string/hpa" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/humidity_icon"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_humidity" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/air_humidity"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timed_count_edit_text_humidity"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:textSize="20sp"
            android:background="@null"
            android:importantForAutofill="no"
            android:hint="@string/empty"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:text="@string/percent" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="0dp"
        android:text="@string/other_data" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="4dp"
        android:paddingBottom="0dp"
        android:text="@string/other_data_desc" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timed_count_edit_text_habitat"
        android:layout_gravity="center_vertical"
        android:hint="@string/habitat"
        android:importantForAutofill="no"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:drawableStart="@drawable/ic_leaf"
        android:drawablePadding="16dp"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timed_count_edit_text_comment"
        android:layout_gravity="center_vertical"
        android:hint="@string/additional_comments"
        android:minWidth="100sp"
        android:importantForAutofill="no"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:drawableStart="@drawable/ic_comment"
        android:drawablePadding="16dp"
        android:inputType="text" />

</LinearLayout>